in the middle of icons

--- a/app/mardownExamples/media_icons/03.md
+++ b/app/mardownExamples/media_icons/03.md
@@ -1,3 +1,30 @@
 ```javascript
-
+export function AvatarFunctionThree() {
+  return (
+    <SingleExample bg="background">
+      <Stack direction="row" spacing="1rem">
+        <Avatar
+          name="Person One"
+          size="md"
+          src="https://bit.ly/broken-link"
+          bg="blue.500"
+          icon={<AiOutlineUser fontSize="1.5rem" />}
+        />
+        <Avatar
+          name="Person Two"
+          size="lg"
+          src="https://bit.ly/broken-link"
+          bg="green.500"
+          icon={<AiOutlineUser fontSize="1.5rem" />}
+        />
+        <Avatar
+          size="xl"
+          src="https://bit.ly/broken-link"
+          bg="red.500"
+          icon={<AiOutlineUser fontSize="1.5rem" />}
+        />
+      </Stack>
+    </SingleExample>
+  );
+}
 ```
