--- a/app/mardownExamples/media_icons/04.md
+++ b/app/mardownExamples/media_icons/04.md
@@ -1,3 +1,34 @@
 ```javascript
+export function AvatarFunctionFour() {
+  return (
+    <SingleExample bg="background">
+      <Stack direction="row" spacing={4}>
+        <Avatar
+          name="Person One"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704e"
+        >
+          <AvatarBadge boxSize="1.25em" bg="green.300" />
+        </Avatar>
 
+        <Avatar
+          name="Person Two"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704d"
+        >
+          <AvatarBadge borderColor="cyan" bg="deeppink" boxSize="1.25em" />
+        </Avatar>
+
+        <Avatar
+          name="Person Three"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704c"
+        >
+          <AvatarBadge
+            borderColor="green.200"
+            bg="yellow.500"
+            boxSize="1.25em"
+          />
+        </Avatar>
+      </Stack>
+    </SingleExample>
+  );
+}
 ```
