--- a/app/mardownExamples/media_icons/05.md
+++ b/app/mardownExamples/media_icons/05.md
@@ -1,3 +1,30 @@
 ```javascript
-
+export function AvatarFunctionFive() {
+  return (
+    <SingleExample bg="background">
+      <AvatarGroup size="lg" max={3} spacing={-3} color="background">
+        <Avatar
+          name="Person One"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704e"
+        />
+        <Avatar
+          name="Person Two"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704d"
+        />
+        <Avatar
+          name="Person Three"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704c"
+        />
+        <Avatar
+          name="Person Four"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704a"
+        />
+        <Avatar
+          name="Person Five"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704b"
+        />
+      </AvatarGroup>
+    </SingleExample>
+  );
+}
 ```
