--- a/app/mardownExamples/media_icons/06.md
+++ b/app/mardownExamples/media_icons/06.md
@@ -1,3 +1,19 @@
 ```javascript
-
+export function AvatarFunctionSix() {
+  return (
+    <SingleExample bg="background">
+      <Avatar
+        size="lg"
+        name="Person One"
+        getInitials={(fullName) =>
+          fullName
+            .split(" ")
+            .map((namePart) => namePart[0])
+            .reverse()
+            .join("")
+        }
+      />
+    </SingleExample>
+  );
+}
 ```
