--- a/app/mardownExamples/media_icons/h01.md
+++ b/app/mardownExamples/media_icons/h01.md
@@ -1,3 +1,15 @@
 ```javascript
-
+export function AvatarTipOne() {
+  return (
+    <SingleExample bg="background">
+      <Button as="a" href="/profile" p={0} borderRadius="full">
+        <Avatar
+          size="lg"
+          name="Person One"
+          src="https://i.pravatar.cc/150?u=a042581f4e29026704e"
+        />
+      </Button>
+    </SingleExample>
+  );
+}
 ```
