--- a/app/mardownExamples/media_icons/h02.md
+++ b/app/mardownExamples/media_icons/h02.md
@@ -1,3 +1,13 @@
 ```javascript
-
+export function AvatarTipTwo() {
+  return (
+    <SingleExample bg="background">
+      <Avatar
+        size="lg"
+        name="Person One"
+        bg="linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%)"
+      />
+    </SingleExample>
+  );
+}
 ```
