--- a/app/mardownExamples/media_icons/h03.md
+++ b/app/mardownExamples/media_icons/h03.md
@@ -1,3 +1,14 @@
 ```javascript
-
+export function AvatarTipThree() {
+  return (
+    <SingleExample bg="background">
+      <Avatar
+        size="lg"
+        name="Person One"
+        src="https://i.pravatar.cc/150?u=a042581f4e29026704e"
+        borderRadius="10%"
+      />
+    </SingleExample>
+  );
+}
 ```
