finished media and icons

--- a/app/mardownExamples/media_icons/07.md
+++ b/app/mardownExamples/media_icons/07.md
@@ -1,3 +1,9 @@
 ```javascript
-
+export function ImageFunctionOne() {
+  return (
+    <SingleExample bg="background">
+      <Image src="imageLink" fallbackSrc="imageLink" />
+    </SingleExample>
+  );
+}
 ```
