--- a/app/mardownExamples/media_icons/08.md
+++ b/app/mardownExamples/media_icons/08.md
@@ -1,3 +1,37 @@
 ```javascript
-
+export function ImageFunctionTwo() {
+  return (
+    <SingleExample bg="background">
+      <VStack spacing={3}>
+        <VStack spacing={0}>
+          <Highlighter>{`boxSize="200px"`}</Highlighter>
+          <Image
+            boxSize="200px"
+            objectFit="cover"
+            src="imageLink"
+            alt="Pretty Shapes"
+          />
+        </VStack>
+        <VStack spacing={0}>
+          <Highlighter>{`boxSize="20rem"`}</Highlighter>
+          <Image
+            boxSize="20rem"
+            objectFit="cover"
+            src="imageLink"
+            alt="Pretty Shapes"
+          />
+        </VStack>
+        <VStack spacing={0}>
+          <Highlighter>{`boxSize="20em"`}</Highlighter>
+          <Image
+            boxSize="20em"
+            objectFit="cover"
+            src="imageLink"
+            alt="Pretty Shapes"
+          />
+        </VStack>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
