--- a/app/mardownExamples/media_icons/09.md
+++ b/app/mardownExamples/media_icons/09.md
@@ -1,3 +1,36 @@
 ```javascript
+<Image
+  boxSize="200px"
+  objectFit="fill"
+  src="imageURL"
+  alt="arctic fox"
+/>
 
+<Image
+  boxSize="200px"
+  objectFit="contain"
+  src="imageURL"
+  alt="artic fox"
+/>
+
+<Image
+  boxSize="200px"
+  objectFit="cover"
+  src="imageURL"
+  alt="artic fox"
+/>
+
+<Image
+  boxSize="200px"
+  objectFit="none"
+  src="imageURL"
+  alt="artic fox"
+/>
+
+<Image
+  boxSize="200px"
+  objectFit="scale-down"
+  src="imageURL"
+  alt="artic fox"
+/>
 ```
