--- a/app/mardownExamples/media_icons/10.md
+++ b/app/mardownExamples/media_icons/10.md
@@ -1,3 +1,29 @@
 ```javascript
+<Image
+    borderRadius="full"
+    boxSize="200px"
+    src="imageURL"
+    alt="prettiness"
+    />
 
+<Image
+    borderRadius="xl"
+    boxSize="200px"
+    src="imageURL"
+    alt="prettiness"
+    />
+
+ <Image
+    borderRadius="lg"
+    boxSize="200px"
+    src="imageURL"
+    alt="prettiness"
+    />
+
+<Image
+    borderRadius="md"
+    boxSize="200px"
+    src="imageURL"
+    alt="prettiness"
+    />
 ```
