--- a/app/mardownExamples/media_icons/11.md
+++ b/app/mardownExamples/media_icons/11.md
@@ -1,3 +1,13 @@
 ```javascript
-
+export function ImageFunctionFive() {
+  return (
+    <SingleExample bg="background">
+      <Image
+        src="https://invalid-url.com/image.jpg"
+        fallbackSrc="https://via.placeholder.com/150"
+        alt="Image with Fallback"
+      />
+    </SingleExample>
+  );
+}
 ```
