--- a/app/mardownExamples/media_icons/h04.md
+++ b/app/mardownExamples/media_icons/h04.md
@@ -1,3 +1,15 @@
 ```javascript
-
+export function ImageWithCaption() {
+  return (
+    <VStack spacing={0} m={0}>
+      <Image src="imageURL" alt="beautiful geometry" />
+      <Text py={1} px={3} mb={0}>
+        Lovely image courtesy of{" "}
+        <Link href="https://generative-placeholders.glitch.me/" isExternal>
+          Generative-Placeholders
+        </Link>
+      </Text>
+    </VStack>
+  );
+}
 ```
