--- a/app/mardownExamples/media_icons/h05.md
+++ b/app/mardownExamples/media_icons/h05.md
@@ -1,3 +1,9 @@
 ```javascript
-
+export function ClickableImage() {
+  return (
+    <Link href="https://cat-bounce.com/" isExternal>
+      <Image src="imageURL" alt="Loveliness" objectFit="cover" />
+    </Link>
+  );
+}
 ```
