--- a/app/mardownExamples/media_icons/h06.md
+++ b/app/mardownExamples/media_icons/h06.md
@@ -1,3 +1,12 @@
 ```javascript
-
+export function ImageWithFilter() {
+  return (
+    <Image
+      src="imageURL"
+      alt="Loveliness"
+      objectFit="cover"
+      filter="grayscale(100%)"
+    />
+  );
+}
 ```
