--- a/app/mardownExamples/media_icons/h08.md
+++ b/app/mardownExamples/media_icons/h08.md
@@ -1,3 +1,9 @@
 ```javascript
-
+export function ClickableImage() {
+  return (
+    <Link href="linkURL" isExternal>
+      <Image boxSize="150px" src="imageURL" alt="Something special" />
+    </Link>
+  );
+}
 ```
