finished data display yay

--- a/app/mardownExamples/data_display/14.md
+++ b/app/mardownExamples/data_display/14.md
@@ -1,3 +1,31 @@
 ```javascript
-
+<Box maxW="300px">
+  <TableContainer>
+    <Table>
+      <Tbody>
+        <Tr>
+          <Td>Espresso</Td>
+          <Td>
+            A full-flavored, concentrated form of coffee that is served in
+            'shots'.
+          </Td>
+        </Tr>
+        <Tr>
+          <Td>Americano</Td>
+          <Td>
+            Espresso diluted with hot water, making it a less-concentrated
+            version of regular espresso.
+          </Td>
+        </Tr>
+        <Tr>
+          <Td>Latte</Td>
+          <Td>
+            Espresso mixed with hot steamed milk, usually topped with a small
+            amount of foam.
+          </Td>
+        </Tr>
+      </Tbody>
+    </Table>
+  </TableContainer>
+</Box>
 ```
