--- a/app/mardownExamples/data_display/15.md
+++ b/app/mardownExamples/data_display/15.md
@@ -1,3 +1,52 @@
 ```javascript
-
+<TableContainer>
+  <Table size="sm">
+    <TableCaption>Coffee Shop Inventory</TableCaption>
+    <Thead>
+      <Tr>
+        <Th>Product</Th>
+        <Th>Description</Th>
+        <Th isNumeric>Quantity</Th>
+        <Th isNumeric>Price</Th>
+      </Tr>
+    </Thead>
+    <Tbody>
+      <Tr>
+        <Td>Espresso</Td>
+        <Td>
+          A full-flavored, concentrated form of coffee that is served in
+          'shots'.
+        </Td>
+        <Td isNumeric>50</Td>
+        <Td isNumeric>$3.00</Td>
+      </Tr>
+      <Tr>
+        <Td>Americano</Td>
+        <Td>
+          Espresso diluted with hot water, making it a less-concentrated version
+          of regular espresso.
+        </Td>
+        <Td isNumeric>30</Td>
+        <Td isNumeric>$2.50</Td>
+      </Tr>
+      <Tr>
+        <Td>Latte</Td>
+        <Td>
+          Espresso mixed with hot steamed milk, usually topped with a small
+          amount of foam.
+        </Td>
+        <Td isNumeric>20</Td>
+        <Td isNumeric>$4.00</Td>
+      </Tr>
+    </Tbody>
+    <Tfoot>
+      <Tr>
+        <Th>Total Quantity</Th>
+        <Th />
+        <Th isNumeric>100</Th>
+        <Th isNumeric>$9.50</Th>
+      </Tr>
+    </Tfoot>
+  </Table>
+</TableContainer>
 ```
