--- a/app/mardownExamples/data_display/h06.md
+++ b/app/mardownExamples/data_display/h06.md
@@ -1,3 +1,50 @@
 ```javascript
-
+export function InteractiveTableRow() {
+  return (
+    <TableContainer
+      padding="5px"
+      sx={TTP}
+      width={{ base: "300px", sm: "400px", md: "500px", lg: "250px" }}
+    >
+      <Table>
+        <Thead>
+          <Tr>
+            <Th>Name</Th>
+            <Th>Age</Th>
+            <Th>Address</Th>
+          </Tr>
+        </Thead>
+        <Tbody>
+          <Tr onClick={() => alert("This is John Doe. He is a cool guy.")}>
+            <Td>John Doe</Td>
+            <Td>24</Td>
+            <Td>123 Main St</Td>
+          </Tr>
+          <Tr
+            onClick={() =>
+              alert(
+                "This is Jane Doe. She is married to John. She is kinda meh."
+              )
+            }
+          >
+            <Td>Jane Doe</Td>
+            <Td>23</Td>
+            <Td>123 Main St</Td>
+          </Tr>
+          <Tr
+            onClick={() =>
+              alert(
+                "This is Chester. For some reason, his paws are always covered in cheese."
+              )
+            }
+          >
+            <Td>Chester Cheetah</Td>
+            <Td>33</Td>
+            <Td>987 Wild Cat Lane</Td>
+          </Tr>
+        </Tbody>
+      </Table>
+    </TableContainer>
+  );
+}
 ```
