--- a/app/mardownExamples/data_display/h07.md
+++ b/app/mardownExamples/data_display/h07.md
@@ -1,3 +1,27 @@
 ```javascript
-
+<Table>
+  <Thead>
+    <Tr>
+      <Th>Name</Th>
+      <Th>Age</Th>
+      <Th>Details</Th>
+    </Tr>
+  </Thead>
+  <Tbody>
+    <Tr onClick={handleToggle} _hover={{ cursor: "pointer" }}>
+      <Td>John Doe</Td>
+      <Td>24</Td>
+      <Td>Click for more</Td>
+    </Tr>
+    <Tr>
+      <Td colSpan={3}>
+        <Collapse in={show}>
+          <Box p="6" borderWidth={1} borderRadius="md" onClick={handleToggle}>
+            John Doe is a web developer living in the United States.
+          </Box>
+        </Collapse>
+      </Td>
+    </Tr>
+  </Tbody>
+</Table>
 ```
