--- a/app/mardownExamples/data_display/h08.md
+++ b/app/mardownExamples/data_display/h08.md
@@ -1,3 +1,30 @@
 ```javascript
+const data = [
+  { task: "Task 1", progress: 80 },
+  { task: "Task 2", progress: 40 },
+  { task: "Task 3", progress: 20 },
+];
 
+export default function TaskTable() {
+  return (
+    <Table>
+      <Thead>
+        <Tr>
+          <Th>Task</Th>
+          <Th>Progress</Th>
+        </Tr>
+      </Thead>
+      <Tbody>
+        {data.map((item, index) => (
+          <Tr key={index}>
+            <Td>{item.task}</Td>
+            <Td>
+              <Progress value={item.progress} />
+            </Td>
+          </Tr>
+        ))}
+      </Tbody>
+    </Table>
+  );
+}
 ```
