--- a/app/mardownExamples/data_display/h09.md
+++ b/app/mardownExamples/data_display/h09.md
@@ -1,3 +1,47 @@
 ```javascript
+export function ProgressIndicator() {
+  const steps = ["Step 1", "Step 2", "Step 3", "Step 4"];
+  const [currentStep, setCurrentStep] = useState(0);
 
+  const handleNext = () => {
+    if (currentStep < steps.length - 1) setCurrentStep(currentStep + 1);
+  };
+
+  const handlePrevious = () => {
+    if (currentStep > 0) setCurrentStep(currentStep - 1);
+  };
+
+  return (
+    <>
+      <HStack spacing={4}>
+        {steps.map((step, index) => (
+          <Tag
+            size="md"
+            key={index}
+            variant={currentStep === index ? "solid" : "outline"}
+            color="accent_1"
+          >
+            {step}
+          </Tag>
+        ))}
+      </HStack>
+      <HStack mt={4}>
+        <Button
+          sx={ButtonStyles}
+          onClick={handlePrevious}
+          disabled={currentStep === 0}
+        >
+          Previous
+        </Button>
+        <Button
+          sx={ButtonStyles}
+          onClick={handleNext}
+          disabled={currentStep === steps.length - 1}
+        >
+          Next
+        </Button>
+      </HStack>
+    </>
+  );
+}
 ```
