--- a/app/mardownExamples/data_display/h10.md
+++ b/app/mardownExamples/data_display/h10.md
@@ -1,3 +1,67 @@
 ```javascript
+export function Blog() {
+  const [activeTag, setActiveTag] = useState("Filter by Tag");
 
+  const tags = ["JavaScript", "React", "Chakra UI", "OpenAI"];
+
+  const blogPosts = [
+    { title: "JavaScript Essentials", tag: "JavaScript" },
+    { title: "Getting Started with React", tag: "React" },
+    { title: "Introduction to Chakra UI", tag: "Chakra UI" },
+    { title: "OpenAI and Machine Learning", tag: "OpenAI" },
+    { title: "JavaScript Arrays and Objects", tag: "JavaScript" },
+    { title: "Mastering React Hooks", tag: "React" },
+    { title: "Chakra UI and Styled System", tag: "Chakra UI" },
+    { title: "Deep Learning and Neural Networks", tag: "OpenAI" },
+    { title: "React Hooks and Functional Components", tag: "React" },
+    // More posts...
+  ];
+
+  const filteredPosts = blogPosts.filter(
+    (post) => activeTag === "All" || post.tag === activeTag
+  );
+
+  return (
+    <>
+      <HStack w="100%" alignItems="flex-start">
+        <VStack
+          h="100%"
+          alignItems="flex-start"
+          justifyContent="flex-start"
+          paddingY={0}
+        >
+          {tags.map((tag, index) => (
+            <Tag
+              size="sm"
+              key={index}
+              variant={activeTag === tag ? "solid" : "outline"}
+              color="accent_2"
+              onClick={() => setActiveTag(tag)}
+              mr={1}
+              mb={2}
+            >
+              {tag}
+            </Tag>
+          ))}
+        </VStack>
+
+        <Box overflowY="auto" h="235px%">
+          {filteredPosts.map((post, index) => (
+            <HStack>
+              <ArrowForwardIcon />
+              <Text
+                mb={1}
+                key={index}
+                fontSize={{ base: "11px", sm: "12px", md: "13px", lg: "11px" }}
+                lineHeight="1rem"
+              >
+                {post.title}
+              </Text>
+            </HStack>
+          ))}
+        </Box>
+      </HStack>
+    </>
+  );
+}
 ```
