--- a/app/mardownExamples/data_display/12.md
+++ b/app/mardownExamples/data_display/12.md
@@ -1,3 +1,36 @@
 ```javascript
-
+<TableContainer>
+  <Table variant="striped" colorScheme="blue">
+    <TableCaption>Striped: Coffee Types and Descriptions</TableCaption>
+    <Thead>
+      <Tr>
+        <Th color="mainText">Type of Coffee</Th>
+        <Th color="mainText">Description</Th>
+      </Tr>
+    </Thead>
+    <Tbody>
+      <Tr>
+        <Td>Espresso</Td>
+        <Td>
+          A full-flavored, concentrated form of coffee that is served in
+          'shots'.
+        </Td>
+      </Tr>
+      <Tr>
+        <Td>Americano</Td>
+        <Td>
+          Espresso diluted with hot water, making it a less-concentrated version
+          of regular espresso.
+        </Td>
+      </Tr>
+      <Tr>
+        <Td>Latte</Td>
+        <Td>
+          Espresso mixed with hot steamed milk, usually topped with a small
+          amount of foam.
+        </Td>
+      </Tr>
+    </Tbody>
+  </Table>
+</TableContainer>
 ```
