--- a/app/mardownExamples/data_display/16.md
+++ b/app/mardownExamples/data_display/16.md
@@ -1,3 +1,41 @@
 ```javascript
+export function TagFunctionOne() {
+  const initialTags = ["One", "Two", "Three"];
+  const [tags, setTags] = useState(initialTags);
+  const handleClose = (tagToRemove: string) => {
+    setTags(tags.filter((tag) => tag !== tagToRemove));
+  };
 
+  const handleReset = () => {
+    setTags(initialTags);
+  };
+
+  return (
+    <SingleExample bg="background">
+      <VStack w="100%">
+        <Box h="40%">
+          <HStack spacing={2}>
+            {tags.map((tag, index) => (
+              <Tag
+                size="md"
+                key={index}
+                borderRadius="full"
+                variant="solid"
+                colorScheme="red"
+              >
+                <TagLabel>Close me!</TagLabel>
+                <TagCloseButton onClick={() => handleClose(tag)} />
+              </Tag>
+            ))}
+          </HStack>
+        </Box>
+        <Box h="60%">
+          <Button sx={ButtonStyles} onClick={handleReset} mt={4}>
+            Reset Tags
+          </Button>
+        </Box>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
