--- a/app/mardownExamples/data_display/h04.md
+++ b/app/mardownExamples/data_display/h04.md
@@ -1,3 +1,36 @@
 ```javascript
-
+<List as="nav" width="200px">
+  <ListItem
+    p={2}
+    cursor="pointer"
+    fontWeight="bold"
+    color="linkColor"
+    _hover={{
+      bg: "accent_1",
+      color: "background",
+      borderRadius: "sm",
+    }}
+    onClick={() => {
+      window.open(CatsBouncing, "_blank");
+    }}
+  >
+    First Item
+  </ListItem>
+  <ListItem
+    p={2}
+    cursor="pointer"
+    fontWeight="bold"
+    color="linkColor"
+    _hover={{
+      bg: "accent_1",
+      color: "background",
+      borderRadius: "sm",
+    }}
+    onClick={() => {
+      window.open(CatsBouncing, "_blank");
+    }}
+  >
+    Second Item
+  </ListItem>
+</List>
 ```
