--- a/app/mardownExamples/data_display/h11.md
+++ b/app/mardownExamples/data_display/h11.md
@@ -1,3 +1,42 @@
 ```javascript
+export function ProductFeatures() {
+  const features = [
+    { title: "Feature 1", content: "This is the detail of Feature 1." },
+    { title: "Feature 2", content: "This is the detail of Feature 2." },
+    { title: "Feature 3", content: "This is the detail of Feature 3." },
+    { title: "Feature 4", content: "This is the detail of Feature 4." },
+    // More features...
+  ];
 
+  const [activeFeature, setActiveFeature] = useState(features[0]);
+
+  return (
+    <VStack align="start" spacing={4}>
+      <Box>
+        {features.map((feature, index) => (
+          <Tag
+            size="md"
+            key={index}
+            variant={
+              activeFeature.title === feature.title ? "solid" : "outline"
+            }
+            color="accent_1"
+            onClick={() => setActiveFeature(feature)}
+            mr={2}
+            mb={2}
+          >
+            {feature.title}
+          </Tag>
+        ))}
+      </Box>
+
+      <Box p={4} borderWidth={1} borderRadius="md" w="100%">
+        <Heading size="md" mb={2}>
+          {activeFeature.title}
+        </Heading>
+        <Text>{activeFeature.content}</Text>
+      </Box>
+    </VStack>
+  );
+}
 ```
