i cannot deal with stepper and flex spacing anymore today. I am officially done for now... omg.

--- a/app/mardownExamples/navigation/10.md
+++ b/app/mardownExamples/navigation/10.md
@@ -1,3 +1,14 @@
 ```javascript
-
+<LinkBox as="article">
+  <h2>
+    <LinkOverlay as={ReactLink} href="#">
+      AI Advancements 2023
+    </LinkOverlay>
+  </h2>
+  <p>
+    Get an in-depth analysis of the most significant AI advancements made in
+    2023.
+  </p>
+  <a href={CatsBouncing}>Continue Reading</a>
+</LinkBox>
 ```
