--- a/app/mardownExamples/navigation/11.md
+++ b/app/mardownExamples/navigation/11.md
@@ -1,3 +1,13 @@
 ```javascript
+<div>
+  <SkipNavLink>Skip to content</SkipNavLink>
+  <App />
+</div>
+
+// Inside another component, like App
+<div>
+  <SkipNavContent />
+  // The main content follows
+</div>
 
 ```
