--- a/app/mardownExamples/navigation/h05.md
+++ b/app/mardownExamples/navigation/h05.md
@@ -1,3 +1,8 @@
 ```javascript
-
+<LinkBox as="figure" maxW="sm">
+  <Image src="https://loremflickr.com/g/200/200/paris?lock=53" alt="Paris" />
+  <Text as="figcaption" mt="2">
+    <LinkOverlay href="#">I love Paris.</LinkOverlay>
+  </Text>
+</LinkBox>
 ```
