--- a/app/mardownExamples/navigation/h06.md
+++ b/app/mardownExamples/navigation/h06.md
@@ -1,3 +1,22 @@
 ```javascript
-
+<LinkBox as={Grid} templateColumns="repeat(2, 1fr)" gap={4}>
+  <Box
+    bgImage="https://generative-placeholders.glitch.me/image?width=100&height=100&colors=88&style=circles"
+    sx={BoxStyles}
+  />
+  <Box bg="accent_2" sx={BoxStyles}>
+    <LinkOverlay href={CatsBouncing} isExternal>
+      Link to somewhere interesting
+    </LinkOverlay>
+  </Box>
+  <Box bg="accent_2" sx={BoxStyles}>
+    <LinkOverlay href="http://endless.horse/" isExternal>
+      Link to somewhere else interesting
+    </LinkOverlay>
+  </Box>
+  <Box
+    bgImage="https://generative-placeholders.glitch.me/image?width=100&height=100&colors=26&style=circles"
+    sx={BoxStyles}
+  />
+</LinkBox>
 ```
