--- a/app/mardownExamples/navigation/13.md
+++ b/app/mardownExamples/navigation/13.md
@@ -1,3 +1,38 @@
 ```javascript
+export function StepperFunctionOne() {
+  const steps = [
+    { title: "First", description: "Gather Information" },
+    { title: "Second", description: "Setup Preferences" },
+    { title: "Third", description: "Confirm Submission" },
+  ];
+  const { activeStep } = useSteps({
+    index: 1,
+    count: steps.length,
+  });
 
+  return (
+    <SingleExample bg="background">
+      <Stepper index={activeStep}>
+        {steps.map((step, index) => (
+          <Step key={index}>
+            <StepIndicator>
+              <StepStatus
+                complete={<StepIcon />}
+                incomplete={<StepNumber />}
+                active={<StepNumber />}
+              />
+            </StepIndicator>
+
+            <Box flexShrink="0">
+              <StepTitle>{step.title}</StepTitle>
+              <StepDescription>{step.description}</StepDescription>
+            </Box>
+
+            <StepSeparator />
+          </Step>
+        ))}
+      </Stepper>
+    </SingleExample>
+  );
+}
 ```
