--- a/app/mardownExamples/navigation/h08.md
+++ b/app/mardownExamples/navigation/h08.md
@@ -1,3 +1,67 @@
 ```javascript
+export function StepperTipOne() {
+  const steps = [
+    {
+      title: "Step 1",
+      description: "Size",
+    },
+    {
+      title: "Step 2",
+      description: "Toppings",
+    },
+    {
+      title: "Step 3",
+      description: "Buy",
+    },
+  ];
 
+  const [activeStep, setActiveStep] = useState(0);
+  const [skipExtras, setSkipExtras] = useState(false);
+
+  const nextStep = () => {
+    if (activeStep === 2 && skipExtras) {
+      setActiveStep(4);
+    } else {
+      setActiveStep(activeStep + 1);
+    }
+  };
+
+  return (
+    <Flex h="100%" w="100%" alignItems="flex-start" justifyContent="flex-start">
+      <VStack w="100%" spacing={3} alignSelf="center" justifySelf="flex-start">
+        <Stepper size={tipStepperSizes} index={activeStep} colorScheme="pink">
+          {steps.map((step, index) => (
+            <Step key={index}>
+              <VStack w="33%">
+                <StepIndicator mr="0px">
+                  <StepStatus complete={<StepIcon />} />
+                </StepIndicator>
+                <Box flexShrink="0" textAlign="center">
+                  <StepTitle>{step.title}</StepTitle>
+                </Box>
+              </VStack>
+            </Step>
+          ))}
+        </Stepper>
+        <Button
+          sx={ButtonStyles}
+          size={{ base: "sm", md: "md", lg: "xs" }}
+          onClick={nextStep}
+        >
+          Next
+        </Button>
+
+        {activeStep === 2 && (
+          <Box position="relative" w="100%">
+            <Flex h="40px" position="absolute" left="0" top="0">
+              <Checkbox onChange={(e) => setSkipExtras(e.target.checked)}>
+                <Text fontSize="1rem">Skip Extras</Text>
+              </Checkbox>
+            </Flex>
+          </Box>
+        )}
+      </VStack>
+    </Flex>
+  );
+}
 ```
