--- a/app/mardownExamples/navigation/h09.md
+++ b/app/mardownExamples/navigation/h09.md
@@ -1,3 +1,62 @@
 ```javascript
+export function StepperTipTwo() {
+  const steps = [
+    {
+      title: "Step 1",
+      description: "Size",
+      tooltip: "Choose your preferred pizza size.",
+    },
+    {
+      title: "Step 2",
+      description: "Toppings",
+      tooltip: "Add your favorite toppings.",
+    },
+    {
+      title: "Step 3",
+      description: "Buy",
+      tooltip: "Proceed to checkout and buy your pizza.",
+    },
+  ];
+  const { activeStep } = useSteps({
+    index: 0,
+    count: steps.length,
+  });
 
+  return (
+    <Stepper
+      colorScheme="pink"
+      size={tipStepperSizes}
+      index={activeStep}
+      gap="0"
+      w="100%"
+    >
+      {steps.map((step, index) => (
+        <Step key={index}>
+          <Tooltip
+            label={step.tooltip}
+            placement="top"
+            bg="accent_2"
+            borderRadius="md"
+            color="black"
+          >
+            <Box>
+              <Box>
+                <StepIndicator>
+                  <StepStatus complete={<StepIcon />} />
+                </StepIndicator>
+              </Box>
+
+              <Box>
+                <StepTitle>{step.title}</StepTitle>
+                <StepDescription style={{ color: "white" }}>
+                  {step.description}
+                </StepDescription>
+              </Box>
+            </Box>
+          </Tooltip>
+        </Step>
+      ))}
+    </Stepper>
+  );
+}
 ```
