--- a/app/mardownExamples/navigation/h10.md
+++ b/app/mardownExamples/navigation/h10.md
@@ -1,3 +1,52 @@
 ```javascript
+interface TipStepperThreeProps {
+  initialSteps: { title: string, description: string }[];
+}
 
+export function TipStepperThree({ initialSteps }: TipStepperThreeProps) {
+  const [steps, setSteps] = useState(initialSteps);
+  const { activeStep, setActiveStep } = useSteps({
+    index: 0,
+    count: steps.length,
+  });
+
+  const addStep = () => {
+    const newStep = {
+      title: `Step ${steps.length + 1}`,
+      description: `New Step`,
+    };
+    setSteps([...steps, newStep]);
+  };
+
+  return (
+    <Box>
+      <Stepper
+        index={activeStep}
+        orientation="vertical"
+        colorScheme="pink"
+        size={tipStepperSizes}
+      >
+        {steps.map((step, index) => (
+          <Step key={index}>
+            <StepIndicator>
+              <StepStatus complete={<StepIcon />} />
+            </StepIndicator>
+            <Box flexShrink="0">
+              <StepTitle>{step.title}</StepTitle>
+              <StepDescription>{step.description}</StepDescription>
+            </Box>
+            <StepSeparator />
+          </Step>
+        ))}
+      </Stepper>
+      <Button
+        sx={ButtonStyles}
+        size={{ base: "sm", md: "md", lg: "xs" }}
+        onClick={addStep}
+      >
+        Add Step
+      </Button>
+    </Box>
+  );
+}
 ```
