--- a/app/mardownExamples/navigation/18.md
+++ b/app/mardownExamples/navigation/18.md
@@ -1,3 +1,44 @@
 ```javascript
+const steps = [
+  { title: "First", description: "Intro" },
+  { title: "Second", description: "Welcome" },
+  { title: "Third", description: "Sign up" },
+];
 
+export function StepperFunctionFour() {
+  const { activeStep } = useSteps({
+    index: 1,
+    count: steps.length,
+  });
+
+  return (
+    <SingleExample bg="background">
+      <Stepper
+        w="100%"
+        index={activeStep}
+        colorScheme="pink"
+        size={{ base: "sm", md: "md", lg: "lg" }}
+      >
+        {steps.map((step, index) => (
+          <Step key={index}>
+            <StepIndicator>
+              <StepStatus
+                complete={<StepIcon />}
+                incomplete={<StepNumber />}
+                active={<StepNumber />}
+              />
+            </StepIndicator>
+
+            <Box flexShrink="0">
+              <StepTitle>{step.title}</StepTitle>
+              <StepDescription>{step.description}</StepDescription>
+            </Box>
+
+            <StepSeparator />
+          </Step>
+        ))}
+      </Stepper>
+    </SingleExample>
+  );
+}
 ```
