starting on icon button

--- a/app/mardownExamples/form/05.md
+++ b/app/mardownExamples/form/05.md
@@ -1,3 +1,60 @@
 ```javascript
+export function EditableFunctionOne() {
+  /* Custom control */
+  function EditableControls() {
+    const {
+      isEditing,
+      getSubmitButtonProps,
+      getCancelButtonProps,
+      getEditButtonProps,
+    } = useEditableControls();
 
+    return isEditing ? (
+      <ButtonGroup justifyContent="center" size="sm">
+        <IconButton
+          icon={<CheckIcon />}
+          {...getSubmitButtonProps()}
+          aria-label="Submit"
+        />
+        <IconButton
+          icon={<CloseIcon />}
+          {...getCancelButtonProps()}
+          aria-label="Cancel"
+        />
+      </ButtonGroup>
+    ) : (
+      <Flex justifyContent="center">
+        <IconButton
+          size="sm"
+          icon={<EditIcon />}
+          {...getEditButtonProps()}
+          aria-label="Edit"
+        />
+      </Flex>
+    );
+  }
+
+  return (
+    <EditableBox>
+      <Editable
+        textAlign="center"
+        defaultValue="Hello, Multiverse!"
+        fontSize="2xl"
+        isPreviewFocusable={false}
+      >
+        <HStack
+          spacing={4}
+          justifyContent="space-between"
+          alignItems="center"
+          textAlign="left"
+        >
+          <EditablePreview />
+          {/* Custom input */}
+          <Input as={EditableInput} />
+          <EditableControls />
+        </HStack>
+      </Editable>
+    </EditableBox>
+  );
+}
 ```
