--- a/app/mardownExamples/form/06.md
+++ b/app/mardownExamples/form/06.md
@@ -1,3 +1,61 @@
 ```javascript
+export function EditableFunctionThree() {
+  function EditableControls() {
+    const {
+      isEditing,
+      getSubmitButtonProps,
+      getCancelButtonProps,
+      getEditButtonProps,
+    } = useEditableControls();
 
+    return isEditing ? (
+      <ButtonGroup justifyContent="end" size="sm" w="full" spacing={2} mt={2}>
+        <IconButton
+          sx={ButtonStyles}
+          icon={<CheckIcon />}
+          {...getSubmitButtonProps()}
+          aria-label="Submit"
+        />
+        <IconButton
+          sx={ButtonStyles}
+          icon={<CloseIcon />}
+          {...getCancelButtonProps()}
+          aria-label="Cancel"
+        />
+      </ButtonGroup>
+    ) : (
+      <Flex justifyContent="center">
+        <IconButton
+          size="sm"
+          sx={ButtonStyles}
+          icon={<EditIcon />}
+          {...getEditButtonProps()}
+          aria-label="Edit"
+        />
+      </Flex>
+    );
+  }
+
+  return (
+    <SingleExample bg="background">
+      <Editable
+        defaultValue="This comment adds value to the conversation!"
+        isPreviewFocusable={true}
+        selectAllOnFocus={false}
+      >
+        <Tooltip label="Click to edit" shouldWrapChildren={true}>
+          <EditablePreview
+            py={2}
+            px={4}
+            _hover={{
+              background: useColorModeValue("gray.100", "gray.700"),
+            }}
+          />
+        </Tooltip>
+        <Input py={2} px={4} as={EditableInput} />
+        <EditableControls />
+      </Editable>
+    </SingleExample>
+  );
+}
 ```
