--- a/app/mardownExamples/form/07.md
+++ b/app/mardownExamples/form/07.md
@@ -1,3 +1,32 @@
 ```javascript
-
+export function EditableFunctionFive() {
+  return (
+    <SingleExample bg="background">
+      <Table variant="striped">
+        <Thead>
+          <Tr>
+            <Th>Name</Th>
+            <Th>Age</Th>
+          </Tr>
+        </Thead>
+        <Tbody>
+          <Tr>
+            <Td>
+              <Editable defaultValue="Jasper Jenkins">
+                <EditablePreview />
+                <EditableInput />
+              </Editable>
+            </Td>
+            <Td>
+              <Editable defaultValue="77">
+                <EditablePreview />
+                <EditableInput />
+              </Editable>
+            </Td>
+          </Tr>
+        </Tbody>
+      </Table>
+    </SingleExample>
+  );
+}
 ```
