--- a/app/mardownExamples/form/08.md
+++ b/app/mardownExamples/form/08.md
@@ -1,3 +1,56 @@
 ```javascript
+export function FormControlFunctionOne() {
+  const [email, setEmail] = useState("");
+  const [isEmailValid, setIsEmailValid] = useState(true);
+  const [isSubmitting, setIsSubmitting] = useState(false);
+  const [isSubmitted, setIsSubmitted] = useState(false);
 
+  const handleEmailChange = (event: React.ChangeEvent<HTMLInputElement>) => {
+    const inputEmail = event.target.value;
+    setEmail(inputEmail);
+    const isValidEmail = /^\S+@\S+\.\S+$/.test(inputEmail);
+    setIsEmailValid(isValidEmail);
+  };
+
+  const handleSubmit = () => {
+    if (isEmailValid) {
+      setIsSubmitting(true);
+      // Simulating form submission delay for demonstration purposes
+      setTimeout(() => {
+        setIsSubmitted(true);
+        setIsSubmitting(false);
+      }, 2000);
+    }
+  };
+
+  return (
+    <SingleExample bg="background">
+      <FormControl id="email" isRequired isInvalid={!isEmailValid}>
+        <VStack alignItems="flex-start" spacing={3}>
+          <FormLabel>Email address</FormLabel>
+          <Input type="email" value={email} onChange={handleEmailChange} />
+          <FormHelperText color="accent_1">
+            We'll never share your email.
+          </FormHelperText>
+          <Button
+            w="125px"
+            sx={ButtonStyles}
+            onClick={handleSubmit}
+            disabled={isSubmitting || isSubmitted}
+          >
+            {isSubmitting ? <Spinner size="sm" /> : "Submit"}
+          </Button>
+          <Box h="30px">
+            {!isEmailValid && (
+              <FormErrorMessage>Error: Invalid Email Address</FormErrorMessage>
+            )}
+            {isSubmitted && isEmailValid && (
+              <Text color="accent_2">Success: Form Submitted</Text>
+            )}
+          </Box>
+        </VStack>
+      </FormControl>
+    </SingleExample>
+  );
+}
 ```
