--- a/app/mardownExamples/form/09.md
+++ b/app/mardownExamples/form/09.md
@@ -1,3 +1,18 @@
 ```javascript
-
+<VStack w="100%" justify="center">
+  <FormControl as="fieldset" w="100%">
+    <FormLabel as="legend">Favorite Ghibli Character</FormLabel>
+    <RadioGroup defaultValue="Totoro" colorScheme="cyan">
+      <HStack spacing="24px">
+        <Radio value="Totoro">Totoro</Radio>
+        <Radio value="Princess Mononoke">Spirited Away</Radio>
+        <Radio value="Howl">Howl</Radio>
+        <Radio value="Nausicaa">Ponyo</Radio>
+      </HStack>
+    </RadioGroup>
+    <FormHelperText color="mainText">
+      Select if you're a fan of Studio Ghibli.
+    </FormHelperText>
+  </FormControl>
+</VStack>
 ```
