--- a/app/mardownExamples/form/10.md
+++ b/app/mardownExamples/form/10.md
@@ -1,3 +1,14 @@
 ```javascript
-
+<FormControl w="100%" maxWidth="400px">
+  <FormLabel>Favorite Film</FormLabel>
+  <Select placeholder="Select your favorite Hayao Miyazaki film">
+    <option>My Neighbor Totoro</option>
+    <option>Spirited Away</option>
+    <option>Howl's Moving Castle</option>
+    <option>Nausicaa of the Valley of the Wind</option>
+    <option>Castle in the Sky</option>
+    <option>Princess Mononoke</option>
+    <option>Whisper of the Heart</option>
+  </Select>
+</FormControl>
 ```
