--- a/app/mardownExamples/form/h04.md
+++ b/app/mardownExamples/form/h04.md
@@ -1,3 +1,20 @@
 ```javascript
-
+export function EditableFunctionFour() {
+  const [color, setColor] = useState("#44EAFA");
+  return (
+    <SingleExample bg="background">
+      <HStack w="100%" spacing={5} justify="center">
+        <Editable
+          value={color}
+          onChange={(newColor) => setColor(newColor)}
+          placeholder="Enter color code..."
+        >
+          <EditablePreview w="80px" />
+          <EditableInput w="80px" />
+        </Editable>
+        <Box bg={color} h="50px" w="50px" />
+      </HStack>
+    </SingleExample>
+  );
+}
 ```
