--- a/app/mardownExamples/form/h05.md
+++ b/app/mardownExamples/form/h05.md
@@ -1,3 +1,14 @@
 ```javascript
+export function EditableFunctionSix() {
+  const [value, setValue] = useState("2023-09-15");
 
+  return (
+    <SingleExample>
+      <Editable defaultValue={value}>
+        <EditablePreview>{value}</EditablePreview>
+        <EditableInput as="input" type="date" />
+      </Editable>
+    </SingleExample>
+  );
+}
 ```
