--- a/app/mardownExamples/form/h07.md
+++ b/app/mardownExamples/form/h07.md
@@ -1,3 +1,59 @@
 ```javascript
+interface FormControlFunctionThreeProps {
+  isValid?: boolean;
+}
 
+export function FormControlFunctionThree({
+  isValid,
+}: FormControlFunctionThreeProps) {
+  const [email, setEmail] = useState("");
+  const [isEmailValid, setIsEmailValid] = useState(isValid);
+
+  const handleEmailChange = (event: React.ChangeEvent<HTMLInputElement>) => {
+    const inputEmail = event.target.value;
+    setEmail(inputEmail);
+    // Add your email validation logic here
+    const isValidEmail = /^\S+@\S+\.\S+$/.test(inputEmail);
+    setIsEmailValid(isValidEmail);
+  };
+
+  return (
+    <SingleExample bg="background">
+      <VStack spacing={4} justify="flex-start">
+        <FormControl id="email" isInvalid={!isEmailValid} isRequired>
+          <FormLabel>Email</FormLabel>
+          <InputGroup>
+            <Input
+              type="email"
+              value={email}
+              onChange={handleEmailChange}
+              isInvalid={!isEmailValid}
+              borderColor={isEmailValid ? "teal.500" : "red.500"}
+            />
+            <InputRightElement>
+              {isEmailValid ? (
+                <CheckCircleIcon color="teal.500" />
+              ) : (
+                <WarningIcon color="red.500" />
+              )}
+            </InputRightElement>
+          </InputGroup>
+          <Flex h="15px" color="accent_2">
+            {!isEmailValid && (
+              <FormHelperText color="red.500">
+                Your email is invalid.
+              </FormHelperText>
+            )}
+
+            {isEmailValid && (
+              <FormHelperText color="teal.500">
+                Your email is valid.
+              </FormHelperText>
+            )}
+          </Flex>
+        </FormControl>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
