--- a/app/mardownExamples/form/h06.md
+++ b/app/mardownExamples/form/h06.md
@@ -1,3 +1,66 @@
 ```javascript
+interface Field {
+  name: string;
+  type: string;
+}
 
+export function FormControlFunctionTwo() {
+  const [fields, setFields] = useState<Field[]>([{ name: "", type: "" }]);
+
+  const handleAddField = () => {
+    setFields([...fields, { name: "", type: "" }]);
+  };
+
+  const handleRemoveField = (index: number) => {
+    setFields(fields.filter((_, i) => i !== index));
+  };
+
+  const handleChange = (
+    index: number,
+    event: ChangeEvent<HTMLInputElement>
+  ) => {
+    const values = [...fields];
+    values[index][event.target.name as keyof Field] = event.target.value;
+    setFields(values);
+  };
+
+  return (
+    <Box p={5} borderWidth={1} borderRadius="md">
+      {fields.map((field, index) => (
+        <VStack spacing={3} key={index}>
+          <FormControl size="sm">
+            <FormLabel>Name</FormLabel>
+            <Input
+              type="text"
+              name="name"
+              value={field.name}
+              onChange={(event) => handleChange(index, event)}
+            />
+          </FormControl>
+          <FormControl size="sm">
+            <FormLabel>Type</FormLabel>
+            <Input
+              type="text"
+              name="type"
+              value={field.type}
+              onChange={(event) => handleChange(index, event)}
+            />
+          </FormControl>
+          <VStack spacing={1}>
+            <Button
+              size="sm"
+              sx={ButtonStyles}
+              onClick={() => handleRemoveField(index)}
+            >
+              Remove
+            </Button>{" "}
+            <Button size="sm" sx={ButtonStyles} onClick={handleAddField}>
+              Add New Field
+            </Button>
+          </VStack>
+        </VStack>
+      ))}
+    </Box>
+  );
+}
 ```
